src/test/ui/specialization/transmute-specialization.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/transmute-specialization.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute-specialization.rs:11:9
   |
LL |         std::mem::transmute::<u16, <() as Specializable>::Output>(0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u16` (16 bits)
   = note: target type: `<() as Specializable>::Output` (this type does not have a fixed size)

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0512`.
